Changelog 0.2.27 [20221020]:
- Fix trakt rescrape issue

Changelog 0.2.26 [20221020]:
- Add option to enable/disable embeds
- Improved Nyaa a little
- Added Animixplay Embeds

Changelog 0.2.25 [20221018]:
- Improved Episode meta

Changelog 0.2.24 [20221017]:
- Improved trakt search

Changelog 0.2.23 [20221016]:
- Fix dependency issues

Changelog 0.2.22 [20221016]:
- Fix MAL errors related to missing meta for shows

Changelog 0.2.21 [20221015]:
- Improved gogo

Changelog 0.2.20 [20221015]:
- Fix title not showing in next playing window 

Changelog 0.2.19 [20221014]:
- Fix Stein's Gate 0 Issue

Changelog 0.2.18 [20221013]:
- Fix for empty Kitsu lists
- Quickfix for Strings

Changelog 0.2.17 [20221012]:
- Kodi Leia compatibilty fix

Changelog 0.2.16 [20221011]:
- Added Movies and TV Shows Category so that its easier
- Added Trending This Year
- Added Popular This Year
- Added Voted This Year
- Added Upcoming Next Year
- Added Options to disable Menu Items
- Added two new icons: Movies.png and TV Shows.png
- Fix ratings display bug in source select
- Use clearart if available in get sources window

Changelog 0.2.15 [20221008]:
- Fix encoding errors on Kodi Leia

Changelog 0.2.14 [20221008]:
- Fix 'Enable Tertiary Dub Sort Preference' 
- Fix Movie meta in sourceselect screen

Changelog 0.2.13 [20221007]:
- Fix movie source select issue

Changelog 0.2.12 [20221007]:
- Spy x family nyaa fix

Changelog 0.2.11 [20221006]:
- Fix error when no show_meta available

Changelog 0.2.10 [20221006]:
- Fix error when no thumbs available
- Fix preferred audio selection
- Improve episode meta collection for running series

Changelog 0.2.9 [20221006]:
- Added New Setting to change Content Format for Menu Items
- Added Changelog Menu in Tools
- Added textview window and base dialog window for changelog

Changelog 0.2.8 [20221004]:
- Improve episode thumbnails when simkl is used

Changelog 0.2.7 [20221003]:
- Dont use trakt for anime split seasons

Changelog 0.2.6 [20221002]: