@@ -1,10 +1,13 @@
+Changelog 0.2.28 [20221023]:
+- Get embeds from Animix
+
 Changelog 0.2.27 [20221020]:
 - Fix trakt rescrape issue
 
 Changelog 0.2.26 [20221020]:
 - Add option to enable/disable embeds
 - Improved Nyaa a little
-- Added Animixplay Embeds
+- Added Animix scraper
 
 Changelog 0.2.25 [20221018]:
 - Improved Episode meta
